--- a/index.html
+++ b/index.html
@@ -33,6 +33,24 @@
     </head>
     
     <body class="font-nunito text-base text-black dark:text-white dark:bg-slate-900">
+        <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '2113362462362828',
+      xfbml      : true,
+      version    : 'v19.0'
+    });
+    FB.AppEvents.logPageView();
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "https://connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
         <!-- Loader Start -->
         <!-- <div id="preloader">
             <div id="status">
