--- a/index.html
+++ b/index.html
@@ -423,5 +423,28 @@
         <script src="assets/js/plugins.init.js"></script>
         <script src="assets/js/app.js"></script>
         <!-- JAVASCRIPTS -->
+        <script>
+ window.difyChatbotConfig = {
+  token: 'XOk7eGHGU4I2bZuO',
+    inputs: {
+        site_name: 'vietfire.net',
+    },
+ }
+</script>
+<script
+ src="https://udify.app/embed.min.js"
+ id="XOk7eGHGU4I2bZuO"
+ defer>
+</script>
+<style>
+  #dify-chatbot-bubble-button {
+    background-color: #1C64F2 !important;
+  }
+  #dify-chatbot-bubble-window {
+    width: 24rem !important;
+    height: 40rem !important;
+  }
+</style>
+
     </body>
 </html>
