--- a/index.html
+++ b/index.html
@@ -423,9 +423,10 @@
         <script src="assets/js/plugins.init.js"></script>
         <script src="assets/js/app.js"></script>
         <!-- JAVASCRIPTS -->
-        <script>
+
+<script>
  window.difyChatbotConfig = {
-  token: 'XOk7eGHGU4I2bZuO',
+  token: 'ire5asDE4V0x4BBe',
     inputs: {
         site_name: 'vietfire.net',
     },
@@ -433,7 +434,7 @@
 </script>
 <script
  src="https://udify.app/embed.min.js"
- id="XOk7eGHGU4I2bZuO"
+ id="ire5asDE4V0x4BBe"
  defer>
 </script>
 <style>
