--- a/index.html
+++ b/index.html
@@ -426,15 +426,16 @@
 
 <script>
  window.difyChatbotConfig = {
-  token: 'ire5asDE4V0x4BBe',
+  token: 'fU3NFY54OXSSfxRO',
+  baseUrl: 'http://dify.vietfire.net',
     inputs: {
         site_name: 'vietfire.net',
-    },
+    }
  }
 </script>
 <script
- src="https://udify.app/embed.min.js"
- id="ire5asDE4V0x4BBe"
+ src="http://dify.vietfire.net/embed.min.js"
+ id="fU3NFY54OXSSfxRO"
  defer>
 </script>
 <style>
