--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 <script>
  window.difyChatbotConfig = {
   token: 'fU3NFY54OXSSfxRO',
-  baseUrl: 'http://dify.vietfire.net',
+  baseUrl: 'https://dify.vietfire.net',
     inputs: {
         site_name: 'vietfire.net',
     }
