--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
     <script src="https://chatbot.yestourist.com/chatwidget.bundle.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-            window.initChatWidget("https://chatbot.yestourist.com", "tourauct.com");
+            window.initChatWidget("https://chatbot.yestourist.com", "vietfire.net");
         });
     </script>
 
